--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		 <div class="content">
 			 <h2 class="titleText">Wellness Retreat</h2>
 		<p class="text">Because you deserve a break.</p>
-	<a href="./html/ourPlace.html" class="btn main">Learn More</a></div>
+	<a href="../html/ourPlace.html" class="btn main">Learn More</a></div>
 	 </section>
 
 
